Practicing with Bootstrap:Learning Rows and Columns

--- a/saarth.html
+++ b/saarth.html
@@ -9,9 +9,27 @@
   </head>
   <body>
     <h1><strong>Welcome to Saarth Practicing with twitter bootstrap basics</h1></strong>
+
+
+
+<!-- Bootstrap uses the css class "row" to make rows and "spanx" (X ranging from 1 to 12) to create columns" -->
+
+<div class="row">
+  <div class="span4">
+    <p> Welcome to Saarth Practicing with twitter bootstrap basics.
+      </p></div>
+  <div class="span4">
+    <p> Welcome to Saarth Practicing with twitter bootstrap basics.
+      </p></div>
+  <div class="span4">
+    <p> Welcome to Saarth Practicing with twitter bootstrap basics.
+      </p></div>
+
+
     <script src="http://code.jquery.com/jquery.js">
     </script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js">
     </script>
+
   </body>
 </html>
