Practicing with Bootstrap:Making Navigation Bars

--- a/saarth.html
+++ b/saarth.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title> Saarth Mehrotra is learning basic bootstrap </title>
     <meta name="viewport" content="width=device-width, intial-scale = 1.0">
 
-    <!-- Now begins the bootstrap -->
+<!-- Now begins the bootstrap -->
+
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <h1><strong>Welcome to Saarth Practicing with twitter bootstrap basics</h1></strong>
+    <h1><strong><center>Welcome to Saarth Practicing with twitter bootstrap basics</h1></strong></center>
 
+<!-- Navigation Bar-->
 
+<div class="container">
+  <div class="row">
+    <div class-"span6">
+      <ul class="nav nav-pills">
+	<li class="active">
+	  <a href="#"> Home </a> </li>
+	<li><a href="#"> About Me </a></li>
+        <li><a href="#"> Resume </a></li>
+        <li><a href="#"> Projects </a></li>
+        <li><a href="#"> Blog </a></li>
+      </ul>
+    </div>
+  </div>      
+</div>
 
+ 
 <!-- Bootstrap uses the css class "row" to make rows and "spanx" (X ranging from 1 to 12) to create columns" -->
-
+<div class="container">
 <div class="row">
   <div class="span4">
     <p> Welcome to Saarth Practicing with twitter bootstrap basics.
@@ -24,6 +41,21 @@
   <div class="span4">
     <p> Welcome to Saarth Practicing with twitter bootstrap basics.
       </p></div>
+</div>
+
+<!--Works with images aswell-->
+
+<div class="row">
+  <div class="span4">
+    <img src="http://placehold.it/350x350"></div>
+  <div class="span4">
+    <img src="http://placehold.it/350x350"></div>
+  <div class="span4">
+    <img src="http://placehold.it/350x350"></div>
+
+</div>
+
+</div>
 
 
     <script src="http://code.jquery.com/jquery.js">
