Practicing with Bootstrap:Making Collapsing and Expanding Text Boxes

--- a/saarth.html
+++ b/saarth.html
@@ -57,6 +57,52 @@
 
 </div>
 
+<!-- Making collapsible Components -->
+
+<div class="container-fluid">
+  <div class="accordion" id="accordion2">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                  Click me to exapand. Click me again to collapse. Part I.
+        </a>
+      </div>
+      <div id="collapseOne" class="accordion-body collapse" style="height: 0px; ">
+        <div class="accordion-inner">
+	  La de da de de. La de a di do. La da da da di. La da di da do.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+        Click me to exapand. Click me again to collapse. Part II.
+        </a>
+      </div>
+        <div id="collapseTwo" class="accordion-body collapse">
+          <div class="accordion-inner">
+          La de da de de. La de a di do. La da da da di. La da di da do.                </div>
+        </div>
+      </div>
+      <div class="accordion-group">
+        <div class="accordion-heading">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                  Click me to exapand. Click me again to collapse. Part III.
+          </a>
+        </div>
+          <div id="collapseThree" class="accordion-body collapse">
+            <div class="accordion-inner">
+          La de da de de. La de a di do. La da da da di. La da di da do.      
+            </div>
+          </div>
+        </div>
+       </div>
+     </div>
+
+
+
+
+<!-- JavaScript at the end-->
 
     <script src="http://code.jquery.com/jquery.js">
     </script>
