Practicing with Bootstrap:Centering Nav-Pill

--- a/saarth.html
+++ b/saarth.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPOAE html>
 <html lang="en">
   <head>
     <title> Saarth Mehrotra is learning basic bootstrap </title>
@@ -13,9 +13,21 @@
 
 <!-- Navigation Bar-->
 
+<style type='text/css'>
+  .nav-tabs > li, .nav-pills > li{ 
+   float:none;
+   display:inline-block;
+  }
+
+  .nav-pills {
+   text-align:center;
+  }
+</style>
+
+
+<center>
 <div class="container">
-  <div class="row">
-    <div class-"span6">
+   
       <ul class="nav nav-pills">
 	<li class="active">
 	  <a href="#"> Home </a> </li>
@@ -24,14 +36,15 @@
         <li><a href="#"> Projects </a></li>
         <li><a href="#"> Blog </a></li>
       </ul>
-    </div>
-  </div>      
+       
 </div>
-
+</center>
+      
  
 <!-- Bootstrap uses the css class "row" to make rows and "spanx" (X ranging from 1 to 12) to create columns" -->
-<div class="container">
-<div class="row">
+<center>
+<div class="container-fluid">
+<div class="row-fluid">
   <div class="span4">
     <p> Welcome to Saarth Practicing with twitter bootstrap basics.
       </p></div>
@@ -45,7 +58,7 @@
 
 <!--Works with images aswell-->
 
-<div class="row">
+<div class="row-fluid">
   <div class="span4">
     <img src="http://placehold.it/350x350"></div>
   <div class="span4">
@@ -98,7 +111,7 @@
         </div>
        </div>
      </div>
-
+</center>
 
 
 
