Practicing with Bootstrap:Adding Line, and Color to Bckgrounds

--- a/saarth.html
+++ b/saarth.html
@@ -1,19 +1,24 @@
-<!DOCTYPOAE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title> Saarth Mehrotra is learning basic bootstrap </title>
     <meta name="viewport" content="width=device-width, intial-scale = 1.0">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 <!-- Now begins the bootstrap -->
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <h1><strong><center>Welcome to Saarth Practicing with twitter bootstrap basics</h1></strong></center>
+
+    <h1></h1>
+    <h1><strong><center><font size="9">Saarth Mehrotra</font></h1></strong></center>
 
 <!-- Navigation Bar-->
 
 <style type='text/css'>
+
+
   .nav-tabs > li, .nav-pills > li{ 
    float:none;
    display:inline-block;
@@ -22,12 +27,36 @@
   .nav-pills {
    text-align:center;
   }
+
+  .tb-gray{
+  background: #CCCCCC;
+  }
+
+  .row {
+  margin-left:-20px;
+  }
+
+  body {
+  background: #50C49F;
+  font-family:'Roboto';
+  }
+  
+  
 </style>
 
 
+<div class="tb-gray">
+  <div class="container">
+    <div class="row">
+      <div class="span6">
+	<p> </p>
+      </div>
+    </div>
+  </div>    
+</div>
+
 <center>
-<div class="container">
-   
+<div class="container-narrow">
       <ul class="nav nav-pills">
 	<li class="active">
 	  <a href="#"> Home </a> </li>
@@ -36,14 +65,31 @@
         <li><a href="#"> Projects </a></li>
         <li><a href="#"> Blog </a></li>
       </ul>
-       
 </div>
 </center>
+
+<div class="tb-gray">
+  <div class="container">
+    <div class="row">
+      <div class="span1">
+        <p> </p>
+      </div>
+    </div>
+  </div>
+</div>
+
       
  
 <!-- Bootstrap uses the css class "row" to make rows and "spanx" (X ranging from 1 to 12) to create columns" -->
 <center>
 <div class="container-fluid">
+
+<div class="row-fluid">
+  <div class="span12">
+    <img src="http://placehold.it/1350x350"></div>
+</div>
+
+
 <div class="row-fluid">
   <div class="span4">
     <p> Welcome to Saarth Practicing with twitter bootstrap basics.
@@ -111,11 +157,8 @@
         </div>
        </div>
      </div>
-<<<<<<< HEAD
 </center>
-=======
 
->>>>>>> d45c69771edb7b3adee7e42ff24cd93571cb5aad
 
 
 
